# TabLab

./: .example.env  .gitignore  .jshintrc  .travis.yml  Procfile  README.md  angular.json  karma.conf.js  nodemon.json  package-lock.json  package.json  populate.js  pyproject.toml  requirements.txt  server.js  tslint.json  user_credentials.txt
.travis/: master.yml  prepro.yml
backend/: app.js  package.json  populate.js  populate.json  populate_dev.json  populate_prepro.json  populate_prod.json  server.js  socket.js
backend/controllers/: activities.js  auth.js  collections.js  configurations.js  datafiles.js  errors.js  esquemas.js  fricErrors.js  globalConfiguration.js  invitations.js  populate.js  posts.js  reports.js  roles.js  suggestions.js  terminals.js  tests.js  uploads.js  users.js  workspaces.js
backend/database/: config.js
backend/esquemas/: dmf_schema-1623423427799.yaml
backend/files/: fulls_dmf_full_v1_20200504_short-1623432394080.csv  short-1629483612289.xlsx
backend/helpers/: db-validators.js  generate-jwt.js  google-verify.js  index.js  s3.js
backend/middlewares/: check-auth.js  file.js  imagefile.js  index.js  validate-fields.js  validate-file-populate.js  validate-file.js  validate-jwt.js  validate-roles.js
backend/models/: activity.js  collection.js  configuration.js  datafile.js  esquema.js  fricError.js  globalConfiguration.js  index.js  invitation.js  (+8 more)
populate/: populate_dev.json  populate_prepro.json  populate_prod.json
postman_tests/: dev_env.json  prepro_env.json  tests_collection.json
src/: index.html  styles.css  test.ts
(+184 files in other folders)
